fix: horizontal scroll on board page

--- a/src/assets/scss/_board-page.scss
+++ b/src/assets/scss/_board-page.scss
@@ -1,4 +1,6 @@
 .board {
+    display: flex;
+    flex-direction: column;
     margin: 0 auto;
     width: 95vw;
     min-height: calc(100vh - 173px);//-200px
@@ -6,9 +8,9 @@
     margin-bottom: 20px;
     border-radius: 8px;
     border: 1px solid $color_border;
-    overflow-x: auto;
+    //overflow-x: auto;
     background: url('../img/scrum2.png');
-    background-position: right 10px bottom;
+    background-position: right 10px bottom 10px;
     background-repeat: no-repeat;
     background-size: 300px 200px;
     &__header {
@@ -32,5 +34,9 @@
         display: flex;
         justify-content: start;
         align-items: start;
+        &-wrapper {
+          flex: auto;
+          overflow: auto;
+        }
     }
 }
